# iso20022-mcp

./: .gitignore  .xsdata.xml  LICENSE  README.md  SECURITY.md  hello.py  knowledge_base.py  parse_test.py  pyproject.toml  server.py  test_mt103.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
chroma_db/: chroma.sqlite3
scripts/: generate_models.py
src/pactus/: __init__.py  mcp_server.py
src/pactus/core/: __init__.py  converters.py  domain.py  knowledge.py  parsers.py  validators.py  xsd_cache.py
src/pactus/core/domain/: __init__.py  camt053.py  common.py  pacs008.py  validation.py
src/pactus/schemas/: SCHEMAS.md
tests/: conftest.py  test_camt053_parser.py  test_mcp_integration.py  test_pacs008_parser.py  test_server.py  test_validators.py
tests/fixtures/: test_camt053.xml  test_camt053_balances.xml  test_camt053_batched.xml  test_camt053_single.xml  test_pacs008.xml  test_pacs008_multi.xml  test_pain001.xml
