[project]
name = "pactus-mcp"
version = "0.2.0"
description = "Production-grade MCP server for ISO 20022 payment message processing"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Denis Karlinsky" }]
keywords = ["mcp", "iso20022", "fintech", "payments", "swift", "pacs008", "pain001", "camt053"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastmcp>=2.0",
    "lxml>=5.0",
    "pydantic>=2.6",
    "xsdata[cli,lxml]>=24.0",
    "xsdata-pydantic>=24.5",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.scripts]
pactus-mcp = "pactus.mcp_server:main"

[project.urls]
Repository = "https://github.com/deniskarlinsky/iso20022-mcp"
Documentation = "https://github.com/deniskarlinsky/iso20022-mcp#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pactus"]

[tool.hatch.build.targets.wheel.force-include]
"src/pactus/schemas" = "pactus/schemas"
"src/pactus/py.typed" = "pactus/py.typed"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["src/pactus/generated", "legacy"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/pactus"]
exclude = ["src/pactus/generated", "legacy"]

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "xsdata.*", "lxml.*", "pactus.generated.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--cov", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["src/pactus"]
omit = [
    "src/pactus/generated/*",
    "src/pactus/mcp_server.py",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
]
