[project]
name = "pactus-mcp"
version = "1.0.0"
description = "Production-grade MCP server for ISO 20022 payment message processing"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Denis Karlinsky" }]
keywords = ["mcp", "iso20022", "fintech", "payments", "swift", "pacs008", "pain001", "camt053"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastmcp>=2.0",
    "lxml>=5.0",
    "pydantic>=2.6",
    "xsdata[cli,lxml]>=26.2",
    "xsdata-pydantic>=24.5",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.scripts]
pactus-mcp = "pactus.mcp_server:main"

[project.urls]
Repository = "https://github.com/deniskarlinsky/iso20022-mcp"
Documentation = "https://github.com/deniskarlinsky/iso20022-mcp#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pactus"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["src/pactus/generated", "legacy"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/pactus"]
exclude = ["src/pactus/generated", "legacy"]

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "xsdata.*", "lxml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--cov", "--cov-report=term-missing"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/pactus"]
omit = [
    "src/pactus/generated/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
]
